--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.6.2",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
